<resources>
    <string name="app_name">Game</string>
    <string name="blackjack_blurb">In this level, you\'re going to play Blackjack! If you don\'t know how to play Blackjack, <a href="https://entertainment.howstuffworks.com/blackjack3.htm">here\'s</a> a page explaining how to play!</string>
    <string name="blackjack_start">START</string>
    <string name="dealer_hand_label">Dealer\'s Hand:</string>
    <string name="player_hand_label">Your hand:</string>
    <string name="stand_button">Stand</string>
    <string name="hit_button">Hit</string>
    <string name="GuessNumText">Guess The Number</string>
    <string name="end_game_button_text">Next</string>
    <string name="start">start</string>
    <string name="play_again_button">Play again</string>
    <string name="blackjack_play">Blackjack</string>
    <string name="bet_button">Bet</string>
    <string name="okay_button">Ok</string>
    <string name="guess_one_to_fifty">Guess the number from one to fifty.</string>
    <string name="enter_guess_here">Enter your guess here</string>
    <string name="number_of_guesses">Number of guesses:</string>
    <string name="guess_the_number_points">Points:</string>
    <string name="num_of_guesses_value" />
    <string name="submit_button">Submit</string>
    <string name="new_user_button">Create an account</string>
    <string name="old_user_button">Already have an account?</string>
    <string name="title_activity_new_account">Create an account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_prompt">Login</string>
    <string name="setting_1_label">Dark Mode:</string>
    <string name="setting_2_label">Number of Blackjack hands to play:</string>
    <string name="setting_3_label">Number of HighLow rounds to play:</string>
    <string name="num_hands_minimum">1</string>
    <string name="num_rounds_minimum">1</string>
    <string name="settings">Settings</string>
    <string name="hint">Enter your guess here</string>
    <string name="high_text">Your guess is too high. Try again.</string>
    <string name="low_text">Your guess is too low. Try again.</string>
    <string name="resumePrevGame">Resume Previous Game</string>
    <string name="startNewGame">Start New Game</string>
    <string name="saveAndExit">Save and Exit Game</string>
    <string name="pauseAndExit">Pause and exit</string>
    <string name="congrats">Congratulations! You guessed the correct number.</string>
    <string name="stats">Stats</string>
    <string name="game">Games</string>
    <string name="cnb">Cows and Bulls</string>
    <string name="select">Please select a game:</string>
    <string name="time">0:00</string>
    <string name="fewGuess">Fewest Guesses in Guess the Number:</string>
    <string name="longestStreak">Longest Streak in Black Jack:</string>
    <string name="quickTime">Quickest Time in Cows and Bulls:</string>
    <string name="win_rate_label">Win Rate:</string>
    <string name="longest_streak_label">Longest Streak:</string>
    <string name="main_menu">Main Menu</string>
    <string name="guess_button">Guess</string>
    <string name="rules_of_game">Rules</string>
    <string name="rulesText">Rules: Your objective is to guess the number in the fewest guesses and score the lowest points. Score is based on how far your guess is to the number you are to guess. The closer you are to the number, the fewer points you score.</string>
    <string name="rulesTextNew">Rules: Your objective is to guess the number in the fewest guesses and score the lowest points. Score is based on how close your guess is to the number you are to guess. The closer you are to the number, the fewer points you score.</string>
    <string name="NextRound">Next round</string>
    <string name="Youhavefinished">You have finished round</string>
    <string name="outOf">out of</string>
    <string name="cbsetting">Numeric/Alphabet Values for Cows and Bulls</string>
    <string name="timetaken">Time Taken:</string>
    <string name="numguesses">Turns Taken:</string>
    <string name="congratulations">☺ Woot Woot! You have guessed the right number!</string>
    <string name="statsbreakdown">Here is a summary of your hard work:</string>
    <string name="toMainMenu">go to main menu</string>
    <string name="welcomes">Welcome to Cows and Bulls!</string>
    <string name="cowsbullsblurb"> This game requires a combination of strategy and a bit of luck of course. You are required to pinpoint a 5 digit number or string of alphabets. We are here to help you along the way, however. After every guess we will tell you how many digits you have correct but in the wrong place, denoted as Cows, and how many digits you have correct in the correct place, denoted Bulls. Doesn\'t sound too bad hey! Best of luck fellow gamer! </string>
    <string name="proceed">Proceed to Game</string>
    <string name="enter">Please enter a 5 numbers or letters:</string>
    <string name="choose">Number of Players:</string>
    <string name="player1">Single Player</string>
    <string name="player2">Multiplayer</string>

</resources>
