<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start"
        android:layout_width="328dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="471dp"
        android:onClick="startTheGame"
        android:text="@string/startNewGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resumeGame"
        android:layout_width="328dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:onClick="resumeGame"
        android:text="@string/resumePrevGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:id="@+id/rules"
        android:layout_width="326dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:onClick="rules"
        android:text="@string/rules_of_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumeGame" />

    <TextView
        android:id="@+id/rulesText"
        android:layout_width="322dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:text="@string/rulesTextNew"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules" />

</androidx.constraintlayout.widget.ConstraintLayout>