<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".level3.CowsBullsStartActivity">

    <TextView
        android:id="@+id/blurb"
        android:layout_width="268dp"
        android:layout_height="206dp"
        android:layout_marginTop="100dp"
        android:text="@string/cowsbullsblurb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="23dp"
        android:text="@string/welcomes"
        app:layout_constraintBottom_toTopOf="@+id/blurb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="315dp"
        android:layout_height="147dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bulls_and_cows" />

    <Button
        android:id="@+id/toGame"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:onClick="toGame"
        android:text="@string/player1"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blurb"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/choose"
        android:layout_width="165dp"
        android:layout_height="21dp"
        android:text="@string/choose"
        app:layout_constraintBottom_toTopOf="@+id/toGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blurb"
        app:layout_constraintVertical_bias="0.268" />

    <Button
        android:id="@+id/button6"
        android:layout_width="139dp"
        android:layout_height="46dp"
        android:layout_marginTop="13dp"
        android:text="@string/player2"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/toGame"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/toGame"
        app:layout_constraintTop_toBottomOf="@+id/toGame"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>