<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".level3.CowsBullsFinishActivity">

    <TextView
        android:id="@+id/timeTaken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="@string/timetaken"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/timeTaken"
        app:layout_constraintStart_toEndOf="@+id/timeTaken" />

    <TextView
        android:id="@+id/numberOfGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numguesses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/timeTaken"
        app:layout_constraintTop_toBottomOf="@+id/timeTaken"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/numGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfGuesses"
        app:layout_constraintEnd_toEndOf="@+id/time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/time" />

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="174dp"
        android:layout_marginBottom="538dp"
        android:text="@string/congratulations"
        android:textSize="15sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="416dp"
        android:text="@string/statsbreakdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/timeTaken"
        app:layout_constraintTop_toBottomOf="@+id/congrats" />

    <Button
        android:id="@+id/mainMenu"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="184dp"
        android:onClick="menu"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

</androidx.constraintlayout.widget.ConstraintLayout>