<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".level1.activities.EndGameActivity">

    <TextView
        android:id="@+id/longestStreakDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/winRateDisplay"
        app:layout_constraintTop_toTopOf="@+id/longestStreakLabel" />

    <TextView
        android:id="@+id/winRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="226dp"
        android:text="@string/win_rate_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longestStreakLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:text="@string/longest_streak_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/winRateLabel"
        app:layout_constraintTop_toBottomOf="@+id/winRateLabel" />

    <TextView
        android:id="@+id/winRateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/winRateLabel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="215dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longestStreakLabel">

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mainMenu"
            android:text="@string/main_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playAnotherRoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playAnotherRound"
            android:text="@string/play_again_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>